<resources>
    <string name="app_name">PickPick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_menu_home">홈</string>
    <string name="nav_menu_message_list">메시지</string>
    <string name="nav_menu_account">계정</string>

    <string name="common_next">다음</string>
    <string name="common_prev">이전</string>
    <string name="common_done">완료</string>
    <string name="common_confirm">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_submit">제출</string>
    <string name="common_wait">잠시만 기다려주세요.</string>

    <string name="common_require_location_permission">애플리케이션 사용을 위해 위치권한 허용이 필요합니다.</string>

    <string name="common_mbti_intj_title">INTJ</string>
    <string name="common_mbti_intj_content">용의주도한 전략가</string>
    <string name="common_mbti_intp_title">INTP</string>
    <string name="common_mbti_intp_content">논리적인 사색가</string>
    <string name="common_mbti_infj_title">INFJ</string>
    <string name="common_mbti_infj_content">선의의 옹호자</string>
    <string name="common_mbti_infp_title">INFP</string>
    <string name="common_mbti_infp_content">열정적인 중재자</string>
    <string name="common_mbti_istj_title">ISTJ</string>
    <string name="common_mbti_istj_content">청렴결백한 논리주의자</string>
    <string name="common_mbti_isfj_title">ISFJ</string>
    <string name="common_mbti_isfj_content">용감한 수호자</string>
    <string name="common_mbti_istp_title">ISTP</string>
    <string name="common_mbti_istp_content">만능 재주꾼</string>
    <string name="common_mbti_isfp_title">ISFP</string>
    <string name="common_mbti_isfp_content">호기심 많은 예술가</string>
    <string name="common_mbti_entj_title">ENTJ</string>
    <string name="common_mbti_entj_content">대담한 통솔자</string>
    <string name="common_mbti_entp_title">ENTP</string>
    <string name="common_mbti_entp_content">뜨거운 논쟁을 즐기는 변론가</string>
    <string name="common_mbti_enfj_title">ENFJ</string>
    <string name="common_mbti_enfj_content">정의로운 사회운동가</string>
    <string name="common_mbti_enfp_title">ENFP</string>
    <string name="common_mbti_enfp_content">재기발랄한 활동가</string>
    <string name="common_mbti_estj_title">ESTJ</string>
    <string name="common_mbti_estj_content">엄격한 관리자</string>
    <string name="common_mbti_esfj_title">ESFJ</string>
    <string name="common_mbti_esfj_content">사교적인 외교관</string>
    <string name="common_mbti_estp_title">ESTP</string>
    <string name="common_mbti_estp_content">모험을 즐기는 사업가</string>
    <string name="common_mbti_esfp_title">ESFP</string>
    <string name="common_mbti_esfp_content">자유로운 영혼의 연예인</string>

    <string name="socket_on_connection_failed">서버에 연결할 수 없습니다.\n애플리케이션을 종료합니다.</string>
    <string name="socket_on_disconnected">서버에 연결할 수 없습니다.\n애플리케이션을 종료합니다.</string>

    <string name="splash_title">Splash</string>
    <string name="splash_content">나랑\n잘맞는\nMBTI\n친구찾기</string>
    <string name="splash_sign_up">가입하기</string>
    <string name="splash_sign_in">이미 회원이라면 로그인하기</string>
    <string name="splash_email">아이디</string>
    <string name="splash_password">비밀번호</string>
    <string name="splash_find_email">아이디 찾기</string>
    <string name="splash_find_password">비밀번호 찾기</string>
    <string name="splash_failed_to_sign_in">저장된 정보로 로그인을 실패했습니다. 다시 로그인해주세요.</string>

    <string name="sign_up1_title">회원가입</string>
    <string name="sign_up1_email">이메일</string>
    <string name="sign_up1_email_error">이메일을 확인해주세요.</string>
    <string name="sign_up1_email_duplicated">이미 존재하는 이메일입니다.</string>
    <string name="sign_up1_password">비밀번호 (8~16자)</string>
    <string name="sign_up1_password_error">비밀번호를 확인해주세요. 8자 이상, 16자 이하여야 합니다.</string>
    <string name="sign_up1_password_repeat">비밀번호 확인</string>
    <string name="sign_up1_password_repeat_error">비밀번호가 일치하지 않습니다.</string>

    <string name="sign_up2_title">비밀번호 찾기 질문 및 답변</string>
    <string name="sign_up2_answer">답변</string>
    <string name="sign_up2_answer_error">답변을 입력해주세요.</string>

    <string name="sign_up3_title">정보</string>
    <string name="sign_up3_name_title">이름</string>
    <string name="sign_up3_name">이름 (10자 이내)</string>
    <string name="sign_up3_name_error">이름을 입력해주세요.</string>
    <string name="sign_up3_gender_title">성별</string>
    <string name="sign_up3_gender_male">남성</string>
    <string name="sign_up3_gender_female">여성</string>
    <string name="sign_up3_age_title">나이</string>
    <string name="sign_up3_age">나이</string>
    <string name="sign_up3_age_error">나이을 입력해주세요.</string>
    <string name="sign_up3_sign_up_failed">회원가입을 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="sign_up3_sign_in_failed">로그인을 실패했습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="sign_up4_title">정보</string>
    <string name="sign_up4_profile_title">프로필 사진 설정</string>
    <string name="sign_up4_description_title">자기 소개</string>
    <string name="sign_up4_description">자기 소개 쓰기(최대 20자)</string>
    <string name="sign_up4_sign_up_question_failed">취향 질문을 가져오는데 실패했습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="sign_up5_title">나는</string>
    <string name="sign_up5_go_test">MBTI 검사하기</string>
    <string name="sign_up5_mbti_title">MBTI</string>
    <string name="sign_up5_empty_question">답변이 선택되지 않은 질문이 있습니다.</string>
    <string name="sign_up5_failed">취향 설정을 실패했습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="sign_in_title">로그인</string>
    <string name="sign_in_forgot">잊어버리셨다면</string>
    <string name="sign_in_email">이메일</string>
    <string name="sign_in_email_error">이메일을 확인해주세요.</string>
    <string name="sign_in_password">비밀번호</string>
    <string name="sign_in_password_error">비밀번호를 확인해주세요.</string>
    <string name="sign_in_failed">일치하는 정보가 없습니다.</string>

    <string name="find_password_title">비밀번호 찾기</string>
    <string name="find_password_email">이메일</string>
    <string name="find_password_email_error">이메일을 확인해주세요.</string>
    <string name="find_password_qna">질문과 답변</string>
    <string name="find_password_answer">답변</string>
    <string name="find_password_answer_error">답변을 입력해주세요.</string>
    <string name="find_password_failed">일치하는 정보가 없습니다.</string>

    <string name="update_password_title">새로운 비밀번호</string>
    <string name="update_password_password">새 비밀번호 (8~16자)</string>
    <string name="update_password_password_error">비밀번호를 확인해주세요.</string>
    <string name="update_password_password_repeat">비밀번호 확인</string>
    <string name="update_password_password_repeat_error">비밀번호가 일치하지 않습니다.</string>
    <string name="update_password_succeed">비밀번호가 재설정되었습니다. 변경된 비밀번호로 로그인해주세요.</string>

    <string name="home_title">홈</string>
    <string name="home_rewind_default">0</string>
    <string name="home_nope">NOPE</string>
    <string name="home_pick">PICK!</string>
    <string name="home_stack_empty">더이상 매칭되는 친구가 없어요.</string>
    <string name="home_stack_empty_go_account">설정 변경하기</string>
    <string name="home_stack_daily_question_title">오늘의 PICK!</string>
    <string name="home_tutorial_title">환영합니다!</string>
    <string name="home_tutorial_first">MBTI와 취향이 잘맞는 친구를 스와이프하여 찾아보세요!</string>
    <string name="home_tutorial_second">매일 랜덤으로 질문을 드립니다. 저희가 더욱 잘맞는 친구를 찾아드릴게요!</string>

    <string name="message_list_title">메시지</string>

    <string name="chat_block_alert">정말 차단하시겠습니까?</string>
    <string name="chat_failed_to_send">전송을 실패했습니다.</string>
    <string name="chat_timestamp_format">%02d:%02d</string>

    <string name="account_title">설정</string>
    <string name="account_name_format">%s  %d</string>
    <string name="account_description_title">자기 소개</string>
    <string name="account_description">자기 소개 쓰기(최대 20자)</string>
    <string name="account_description_error">자기 소개를 입력해주세요.</string>
    <string name="account_gender_title">선호 성별</string>
    <string name="account_gender_male">남성</string>
    <string name="account_gender_female">여성</string>
    <string name="account_gender_all">모두</string>
    <string name="account_age_title">선호 나이</string>
    <string name="account_age_indicator">%d세 ~ %d세</string>
    <string name="account_distance_title">거리 설정</string>
    <string name="account_distance_indicator">최대 %dkm</string>
    <string name="account_notification_title">알림 허용</string>
    <string name="account_delete_user">회원탈퇴</string>
    <string name="account_delete_user_alert">정말 탈퇴하시겠어요?</string>
    <string name="account_delete_succeed">$4d년 %2d월 %2d일 %s 회원을 탈퇴처리하였습니다.</string>
    <string name="account_delete_failed">회원 탈퇴를 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="account_sign_out">로그아웃</string>
    <string name="account_sign_out_alert">로그아웃하시겠어요?</string>
    <string name="account_sign_out_succeed">로그아웃되었습니다.</string>
</resources>