<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.sign_up.SignUp1Fragment">

    <TextView
        style="@style/FragmentContent.Title"
        android:id="@+id/sign_up1_title"
        android:text="@string/sign_up1_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sign_up1_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/sign_up1_email"
        app:layout_constraintTop_toBottomOf="@id/sign_up1_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="256"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sign_up1_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/card_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/sign_up1_email"
        android:hint="@string/sign_up1_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="16"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sign_up1_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/card_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/sign_up1_password"
        android:hint="@string/sign_up1_password_repeat">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/ButtonNext"
        android:id="@+id/sign_up1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/sign_up1_password_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/common_next"/>
</androidx.constraintlayout.widget.ConstraintLayout>