<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.sign_in.SignInFragment">

    <TextView
        style="@style/FragmentContent.Title"
        android:id="@+id/sign_in_title"
        android:text="@string/sign_in_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/sign_in_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/sign_in_forgot"
        app:layout_constraintBaseline_toBaselineOf="@id/sign_in_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:hint="@string/sign_in_email"
        app:layout_constraintTop_toBottomOf="@id/sign_in_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="256"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:hint="@string/sign_in_password"
        app:layout_constraintTop_toBottomOf="@id/sign_in_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="16"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/sign_in_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/common_next"
        app:layout_constraintTop_toBottomOf="@id/sign_in_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:id="@+id/sign_in_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/sign_in_next"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_next"
        app:layout_constraintStart_toStartOf="@id/sign_in_next"
        app:layout_constraintEnd_toEndOf="@id/sign_in_next" />
</androidx.constraintlayout.widget.ConstraintLayout>