<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/account_guideline_vertical_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            style="@style/FragmentContent.Title"
            android:id="@+id/account_title"
            android:text="@string/account_title"
            android:layout_marginStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <mbtinder.android.ui.view.AsyncImageView
            android:id="@+id/account_profile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/border_image_view"
            android:scaleType="centerCrop"
            android:src="@drawable/img_select_profile"
            app:layout_constraintTop_toBottomOf="@id/account_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/account_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_create_white_18"
            android:backgroundTint="@color/colorPrimary"
            android:translationX="@dimen/activity_horizontal_margin"
            android:translationY="@dimen/activity_vertical_margin"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/account_profile"
            app:layout_constraintEnd_toEndOf="@id/account_profile"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:fabSize="mini" />

        <TextView
            style="@style/FragmentContent.Medium"
            android:id="@+id/account_description_title"
            android:text="@string/account_description_title"
            app:layout_constraintTop_toBottomOf="@id/account_profile"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/account_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/card_horizontal_margin"
            android:layout_marginTop="@dimen/card_vertical_margin"
            android:hint="@string/sign_up4_description"
            app:layout_constraintTop_toBottomOf="@id/account_description_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/account_description_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/account_description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/baseline_create_white_18"
            android:backgroundTint="@color/colorPrimary"
            app:tint="@android:color/white"
            app:layout_constraintTop_toTopOf="@id/account_description"
            app:layout_constraintBottom_toBottomOf="@id/account_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:fabSize="mini" />

        <TextView
            style="@style/FragmentContent.Medium"
            android:id="@+id/account_gender_title"
            android:text="@string/account_gender_title"
            app:layout_constraintTop_toBottomOf="@id/account_description"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/account_gender_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_gender_title"
            app:layout_constraintStart_toStartOf="parent"
            app:singleSelection="true">

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/account_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_gender_male" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/account_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_gender_female" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/account_gender_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_gender_all" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            style="@style/FragmentContent.Medium"
            android:id="@+id/account_age_title"
            android:text="@string/account_age_title"
            app:layout_constraintTop_toBottomOf="@id/account_gender_selector"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/account_age_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:valueFrom="20"
            android:valueTo="100"
            android:stepSize="1"
            app:layout_constraintTop_toBottomOf="@id/account_age_title"
            app:values="@array/account_age_initial" />

        <TextView
            style="@style/FragmentContent.Medium"
            android:id="@+id/account_distance_title"
            android:text="@string/account_distance_title"
            app:layout_constraintTop_toBottomOf="@id/account_age_selector"
            app:layout_constraintStart_toStartOf="parent" />
        
        <com.google.android.material.slider.Slider
            android:id="@+id/account_distance_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:valueFrom="0"
            android:valueTo="100"
            android:stepSize="1"
            android:value="100"
            app:layout_constraintTop_toBottomOf="@id/account_distance_title" />

        <TextView
            style="@style/FragmentContent.Medium"
            android:id="@+id/account_notification_title"
            android:text="@string/account_notification_title"
            app:layout_constraintTop_toBottomOf="@id/account_distance_selector"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/account_notification_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="@id/account_notification_title"
            app:layout_constraintBottom_toBottomOf="@id/account_notification_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_title_vertical_margin"
            android:layout_marginEnd="@dimen/card_horizontal_margin"
            android:text="@string/account_delete_user"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/account_notification_title"
            app:layout_constraintEnd_toStartOf="@id/account_guideline_vertical_50" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_title_vertical_margin"
            android:layout_marginStart="@dimen/card_horizontal_margin"
            android:text="@string/account_sign_out"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/account_notification_title"
            app:layout_constraintStart_toEndOf="@id/account_guideline_vertical_50" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>